// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package schema

import (
	"entgo.io/ent"
	"entgo.io/ent/dialect/entsql"
	"entgo.io/ent/schema/edge"
	"entgo.io/ent/schema/field"

	entschema "entgo.io/ent/schema"
)


// Badge Account badge or achievement marker attached to player profiles.
type Badge struct {
	ent.Schema
}

func (Badge) Annotations() []entschema.Annotation {
	return []entschema.Annotation{
		entsql.Annotation{Table: "badges"},
		entsql.WithComments(true),
	}
}

func (Badge) Mixin() []ent.Mixin {
	return []ent.Mixin{
		Timestamped{},
	}
}

func (Badge) Fields() []ent.Field {
	return []ent.Field{
		field.String("code").
			MaxLen(80).
			Comment("Stable badge code used by tooling and migration scripts.").
			Unique(),
		field.String("label").
			MaxLen(160).
			Comment("Human-readable badge name rendered in the UI."),
	}
}

func (Badge) Edges() []ent.Edge {
	return []ent.Edge{
		edge.To("users", User.Type).
			StorageKey(edge.Table("user_badges"), edge.Columns("badge_id", "user_id")),
	}
}
