// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package schema

import (
	"entgo.io/ent"
	"entgo.io/ent/dialect/entsql"
	entschema "entgo.io/ent/schema"
	"entgo.io/ent/schema/edge"
	"entgo.io/ent/schema/field"
	"entgo.io/ent/schema/index"
)

// User Registered player account.
type User struct {
	ent.Schema
}

func (User) Annotations() []entschema.Annotation {
	return []entschema.Annotation{
		entsql.Annotation{Table: "users", Checks: map[string]string{"users_credits_non_negative": "credits >= 0"}},
		entsql.WithComments(true),
	}
}

func (User) Mixin() []ent.Mixin {
	return []ent.Mixin{
		Timestamped{},
	}
}

func (User) Fields() []ent.Field {
	return []ent.Field{
		field.String("email").
			MaxLen(320).
			Comment("Email address used for login and invitations. Other namespaces reference this via lookup types."),
		field.String("password_hash").
			MaxLen(128).
			Comment("Hashed password - never expose or store plain text credentials."),
		field.String("display_name").
			MaxLen(100).
			Comment("Display name shown throughout the UI."),
		field.String("avatar_url").
			MaxLen(512).
			Comment("Public avatar URL rendered in lists and profile cards.").
			Optional().
			Nillable(),
		field.String("external_id").
			Comment("External identity provider ID (ULID format).").
			Optional().
			Nillable().
			Unique(),
		field.String("session_token").
			Comment("Session token for API authentication.").
			Optional().
			Nillable(),
		field.Int32("age").
			Comment("Player age for content filtering.").
			Optional().
			Nillable(),
		field.String("preferred_locale").
			MaxLen(16).
			Comment("Optional locale preference for formatting and localization.").
			Optional().
			Nillable(),
		field.Int32("credits").
			Default(0).
			Comment("Entitlement credits or consumable balance."),
		field.Enum("role").Values("player", "moderator", "admin").
			Default("player").
			Comment("Role used by moderation features and internal tooling."),
		field.Bool("is_active").
			Default(true).
			Comment("Whether the account is currently active."),
		// Example of a computed UI field excluded from persistence.,
		field.JSON("full_title", map[string]any{}).Optional(),
	}
}

func (User) Edges() []ent.Edge {
	return []ent.Edge{
		edge.To("subscriptions", Subscription.Type).
			StorageKey(edge.Column("user_id")).
			Annotations(entsql.OnDelete(entsql.Cascade)),
		edge.To("badges", Badge.Type).
			StorageKey(edge.Table("user_badges")),
	}
}

func (User) Indexes() []ent.Index {
	return []ent.Index{
		index.Fields("role"),
		index.Fields("email", "deleted_at").
			Unique(),
	}
}
