// Code generated by @qninhdt/typespec-orm. DO NOT EDIT.
// Source: https://github.com/qninhdt/typespec-libraries

package accounts

import (
	"time"

	"github.com/google/uuid"
	"github.com/shopspring/decimal"
	"gorm.io/gorm"
)

// SubscriptionPlan represents the subscription_plan enum.
type SubscriptionPlan string

const (
	SubscriptionPlanFree       SubscriptionPlan = "free"
	SubscriptionPlanBasic      SubscriptionPlan = "basic"
	SubscriptionPlanPremium    SubscriptionPlan = "premium"
	SubscriptionPlanEnterprise SubscriptionPlan = "enterprise"
)

// Subscription Subscription record for feature access and billing.
type Subscription struct {
	// Unique identifier shared by most persisted records.
	ID uuid.UUID `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid();comment:Unique identifier shared by most persisted records." json:"id"`
	// Timestamp when the record was created.
	CreatedAt time.Time `gorm:"column:created_at;type:timestamptz;autoCreateTime;not null;comment:Timestamp when the record was created." json:"createdAt"`
	// Timestamp of the last update.
	UpdatedAt *time.Time `gorm:"column:updated_at;type:timestamptz;comment:Timestamp of the last update." validate:"omitempty" json:"updatedAt,omitempty"`
	// Soft delete marker for archival workflows.
	DeletedAt gorm.DeletedAt `gorm:"column:deleted_at;index;comment:Soft delete marker for archival workflows." json:"deletedAt"`
	// Selected plan tier.
	Plan SubscriptionPlan `gorm:"column:plan;type:varchar(20);not null;index:subscriptions_plan_idx;comment:Selected plan tier." validate:"oneof=free,basic,premium,enterprise" json:"plan"`
	// Monthly price stored as NUMERIC(10,2) to avoid floating-point drift.
	MonthlyPrice decimal.Decimal `gorm:"column:monthly_price;type:numeric(10,2);not null;check:subscriptions_monthly_price_non_negative,monthlyPrice >= 0;comment:Monthly price stored as NUMERIC(10,2) to avoid floating-point drift." validate:"required" json:"monthlyPrice"`
	// Start date of the billing period.
	StartDate time.Time `gorm:"column:start_date;type:timestamptz;not null;comment:Start date of the billing period." validate:"required" json:"startDate"`
	// Optional end date - null means the subscription is open-ended.
	EndDate *time.Time `gorm:"column:end_date;type:timestamptz;comment:Optional end date - null means the subscription is open-ended." validate:"omitempty" json:"endDate,omitempty"`
	// Fast boolean used by feature gates and entitlement checks.
	IsActive bool      `gorm:"column:is_active;type:boolean;not null;index:subscriptions_user_id_is_active_idx,priority:2;default:true;comment:Fast boolean used by feature gates and entitlement checks." json:"isActive"`
	UserID   uuid.UUID `gorm:"column:user_id;type:uuid;not null;index:subscriptions_user_id_is_active_idx,priority:1" validate:"required" json:"userId"`

	// ─── Relationships ─────────────────────
	// Owning user - cascade on delete to clean up subscriptions.
	User User `gorm:"foreignKey:UserID;references:ID;constraint:OnDelete:CASCADE,OnUpdate:CASCADE" json:"user"`
}

// TableName returns the table name for Subscription.
func (Subscription) TableName() string {
	return "subscriptions"
}
